--- a/public/display.html
+++ b/public/display.html
@@ -3,97 +3,143 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Laserpointer Display v3.4</title>
+  <title>Laserpointer Display v3.5</title>
   <style>
     body { margin: 0; background: black; }
     canvas { display: block; margin: auto; background: black; }
     #version {
-      position: absolute; top: 10px; left: 10px;
-      color: white; font-family: sans-serif; font-size: 14px; opacity: 0.6;
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      color: white;
+      font-family: sans-serif;
+      font-size: 14px;
+      opacity: 0.6;
     }
   </style>
 </head>
 <body>
-  <div id="version">v3.4</div>
+  <div id="version">v3.5</div>
   <canvas id="canvas" width="1024" height="1024"></canvas>
+
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    const c = document.getElementById("canvas"), ctx = c.getContext("2d");
-    const MAX_ANGLE = 20, CX = c.width/2, CY = c.height/2;
-    let lastX = null, lastY = null, color = "#ff0000";
+    const c = document.getElementById("canvas");
+    const ctx = c.getContext("2d");
+
+    // Default-Werte, werden per Admin überschrieben
+    let MAX_H = 20, MAX_V = 20;
+    let SMOOTH = 0.15;
+    const CX = c.width / 2, CY = c.height / 2;
+
+    // Zustände
     let calibrated = false, alpha0 = 0, beta0 = 0;
-    // für Glättung
-    let targetX = CX, targetY = CY;
+    let lastRawX = null, lastRawY = null;
     let smoothX = CX, smoothY = CY;
-    const SMOOTH = 0.15; // 0..1, kleiner = stärker glätten
+    let segments = [];
+    let currentColor = "#ff0000";
 
     ctx.lineCap = "round";
     ctx.lineJoin = "round";
 
-    socket.on("motion", ({ alpha, beta, color: ccol, isDrawing }) => {
-      if (typeof alpha!=="number" || typeof beta!=="number") return;
-      if (ccol) color = ccol;
+    // Admin-Einstellungen empfangen
+    socket.on("updateSettings", ({ maxH, maxV, smooth }) => {
+      if (typeof maxH === "number") MAX_H    = maxH;
+      if (typeof maxV === "number") MAX_V    = maxV;
+      if (typeof smooth === "number") SMOOTH = smooth;
+      console.log("Settings:", { MAX_H, MAX_V, SMOOTH });
+    });
 
-      // Kalibrieren beim ersten Drücken
+    // Gyro-Daten empfangen
+    socket.on("motion", ({ alpha, beta, color, isDrawing }) => {
+      if (typeof alpha !== "number" || typeof beta !== "number") return;
+      if (color) currentColor = color;
+
+      // Kalibrierung beim ersten Zeichnen
       if (!calibrated && isDrawing) {
-        alpha0 = alpha; beta0 = beta;
+        alpha0 = alpha;
+        beta0  = beta;
         calibrated = true;
+        // Startpunkt mittig
+        lastRawX = CX;
+        lastRawY = CY;
+        smoothX  = CX;
+        smoothY  = CY;
       }
       if (!calibrated) return;
 
-      // relative Winkel
+      // Relative Winkel (mit Wrap-Around)
       let dA = alpha - alpha0;
-      let dB = beta  - beta0;
-      if (dA>180) dA-=360; if (dA<-180) dA+=360;
-      dA = Math.max(-MAX_ANGLE, Math.min(MAX_ANGLE, dA));
-      dB = Math.max(-MAX_ANGLE, Math.min(MAX_ANGLE, dB));
+      if (dA > 180) dA -= 360;
+      if (dA < -180) dA += 360;
+      const dB = beta - beta0;
 
-      // invertierte Zuordnung
-      targetX = CX - (dA/MAX_ANGLE)*CX;
-      targetY = CY - (dB/MAX_ANGLE)*CY;
+      // Begrenzen
+      const rA = Math.max(-MAX_H, Math.min(MAX_H, dA));
+      const rB = Math.max(-MAX_V, Math.min(MAX_V, dB));
 
+      // Mapping auf Canvas (invertiert, damit Neigen nach rechts → Punkt nach rechts läuft)
+      const rawX = CX - (rA / MAX_H) * CX;
+      const rawY = CY - (rB / MAX_V) * CY;
+
+      // Linien zeichnen, wenn aktiv
       if (isDrawing) {
-        if (lastX !== null && lastY !== null) {
-          ctx.strokeStyle = color;
-          ctx.lineWidth = 6;
-          ctx.beginPath();
-          ctx.moveTo(smoothX, smoothY);
-          ctx.lineTo(targetX, targetY);
-          ctx.stroke();
+        if (lastRawX !== null && lastRawY !== null) {
+          segments.push({
+            x1: lastRawX,
+            y1: lastRawY,
+            x2: rawX,
+            y2: rawY,
+            color: currentColor
+          });
         }
-        lastX = targetX; lastY = targetY;
-      } else {
-        lastX = targetX; lastY = targetY;
       }
+
+      // Immer aktualisieren, auch für den Punkt
+      lastRawX = rawX;
+      lastRawY = rawY;
     });
 
+    // Canvas löschen
     socket.on("clear", () => {
-      ctx.clearRect(0,0,c.width,c.height);
-      lastX = lastY = null;
+      segments = [];
+      ctx.clearRect(0, 0, c.width, c.height);
       calibrated = false;
-      // reset smoothing
-      smoothX = targetX = CX;
-      smoothY = targetY = CY;
+      lastRawX = lastRawY = null;
+      smoothX = CX;
+      smoothY = CY;
     });
 
+    // Render-Loop
     function render() {
-      // Glättung: smoothX nähert sich targetX, usw.
-      smoothX += (targetX - smoothX) * SMOOTH;
-      smoothY += (targetY - smoothY) * SMOOTH;
+      ctx.clearRect(0, 0, c.width, c.height);
 
-      // Anzeige: pulsierender Punkt
-      if (lastX !== null) {
-        const r = 4 + Math.sin(Date.now()/150) * 2;
-        // Punkt auf geglätteter Position
+      // Gezeichnete Linien
+      for (const s of segments) {
+        ctx.strokeStyle = s.color;
+        ctx.lineWidth   = 6;
         ctx.beginPath();
-        ctx.arc(smoothX, smoothY, r, 0, 2*Math.PI);
-        ctx.fillStyle = color;
+        ctx.moveTo(s.x1, s.y1);
+        ctx.lineTo(s.x2, s.y2);
+        ctx.stroke();
+      }
+
+      // Punkt-Glättung
+      if (lastRawX !== null) {
+        smoothX += (lastRawX - smoothX) * SMOOTH;
+        smoothY += (lastRawY - smoothY) * SMOOTH;
+
+        // Pulsierender Punkt
+        const r = 4 + Math.sin(Date.now() / 150) * 2;
+        ctx.beginPath();
+        ctx.arc(smoothX, smoothY, r, 0, 2 * Math.PI);
+        ctx.fillStyle = currentColor;
         ctx.fill();
       }
+
       requestAnimationFrame(render);
     }
-
     render();
   </script>
 </body>
