--- a/public/control.html
+++ b/public/control.html
@@ -3,32 +3,61 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Laserpointer Control v3.4</title>
+  <title>Laserpointer Control v3.5</title>
   <style>
-    body { margin:0; background:black; color:white; font-family:sans-serif; }
-    .version { position:absolute; top:10px; right:10px; font-size:14px; opacity:0.6; }
+    /* Überschreiben der iOS-/Browser-Selection und Callouts */
+    *, button {
+      -webkit-touch-callout: none; /* iOS Kontexmenü */
+      -webkit-user-select: none;   /* Safari */
+      -moz-user-select: none;      /* Firefox */
+      -ms-user-select: none;       /* IE10+ */
+      user-select: none;           /* Standard */
+    }
+    body {
+      margin: 0;
+      background: #000;
+      color: #fff;
+      font-family: sans-serif;
+    }
+    .version {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 14px;
+      opacity: 0.6;
+    }
     #colors {
-      position:absolute; top:10px; left:10px;
-      display:flex; flex-wrap:wrap; gap:6px; width:calc(100% - 20px);
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 6px;
+      width: calc(100% - 20px);
     }
     .color-button {
-      width:30px; height:30px; border-radius:50%; border:none; cursor:pointer;
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      border: none;
+      cursor: pointer;
     }
     #laserBtn {
-      position:absolute;
-      bottom:33%;
-      left:50%;
-      transform:translateX(-50%);
-      width:80px; height:80px;
-      border-radius:50%;
-      background:white;
-      border:none;
-      touch-action:none;
+      position: absolute;
+      bottom: 33%;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      background: white;
+      border: none;
+      touch-action: none;
     }
   </style>
 </head>
 <body>
-  <div class="version">v3.4</div>
+  <div class="version">v3.5</div>
   <div id="colors"></div>
   <button id="laserBtn"></button>
 
@@ -38,12 +67,15 @@
     let isDrawing = false;
     let color = "#ff0000";
 
+    // 16 Farben, sinnvoll sortiert
     const cols = [
       "#ff0000","#ff8000","#ffff00","#80ff00",
       "#00ff00","#00ff80","#00ffff","#0080ff",
       "#0000ff","#8000ff","#ff00ff","#ff0080",
       "#ffffff","#888888","#000000","#ff0088"
     ];
+
+    // Farbpalette aufbauen
     const container = document.getElementById("colors");
     for (const c of cols) {
       const btn = document.createElement("button");
@@ -53,6 +85,7 @@
       container.appendChild(btn);
     }
 
+    // Laserbutton-Events
     const laser = document.getElementById("laserBtn");
     laser.addEventListener("touchstart", e => {
       e.preventDefault();
@@ -63,26 +96,33 @@
       isDrawing = false;
     });
 
+    // Gyro-Daten senden
     function sendOri(e) {
       if (e.alpha == null || e.beta == null) return;
       socket.emit("motion", {
         alpha: e.alpha,
-        beta: e.beta,
+        beta:  e.beta,
         color,
         isDrawing
       });
     }
 
+    // iOS-Permission + Listener
     function init() {
       if (typeof DeviceOrientationEvent.requestPermission === "function") {
         DeviceOrientationEvent.requestPermission()
-          .then(res => { if (res === "granted") window.addEventListener("deviceorientation", sendOri); })
+          .then(res => {
+            if (res === "granted") window.addEventListener("deviceorientation", sendOri);
+          })
           .catch(console.error);
       } else {
         window.addEventListener("deviceorientation", sendOri);
       }
     }
     document.body.addEventListener("touchstart", init, { once: true });
+
+    // Kontextmenü (z.B. „Kopieren“) unterdrücken
+    document.addEventListener("contextmenu", e => e.preventDefault());
   </script>
 </body>
 </html>
